# snubleJS

./: .gitignore  Cargo.toml  README.md  category.py  database.py  fetch.js  getset.py  main.py  package.json  price.mjs  requirements.txt  scrape.py  server.js  store.py  ui.json  visualise.py
.github/workflows/: main_vinskraper.yml
advanced/carlos/: package.json  server.js
advanced/hallvard/: bun.lockb  package.json  server.js
api/: data.json
bun/: bun.lockb  package.json
bun/scrape/: price.mjs
bun/views/: products.ejs
database/: operations.py  refactor.py
examples/: example_mongodb.py
fetch/: detailed.mjs  new.mjs  popular.mjs  price.mjs
javascript_web/: package.json  server.js
javascript_web/views/: index.ejs
local/: getset.py  main.py  requirements.txt  ui.json  visualise.py
local/storage/: AROMATIC_WINE.parquet  FORTIFIED_WINE.parquet  MEAD.parquet  PEARLING_WINE.parquet  RED_WINE.parquet  ROSE_WINE.parquet  SAKE.parquet  WHITE_WINE.parquet
node/: package.json  server.js
node/carlos/: package.json
ord/: README.md  package.json  server.js
other/api/: app.js  (+1 more)
public/: manifest.json  styles.css
python/: database.py  main.py  requirements.txt  ui.json
scrape/: availability.py  available.py  detailed.mjs  detailed.py  new.mjs  new.py  news.py  popular.mjs  price.mjs  price.py  proxy.py  scrape.py  shops.py
simple/: README.md  bun.lockb  server.js
src/: fetch.rs
static/: styles.css
storage/: BEER.parquet  CIDER.parquet  COGNAC.parquet
views/: maintenance.ejs  products.ejs
vinskraper/: getset.py  main.py  scrape.py  ui.json
(+90 files in other folders)
